--- a/packages/load-balancer/.env
+++ b/packages/load-balancer/.env
@@ -1,11 +1,11 @@
-# . docker unix socket "/var/run/docker.sock" or docker api url "http://localhost"
+# Docker unix socket "/var/run/docker.sock" or Docker API URL "http://localhost"
 DOCKER_API_LOCATION="http://localhost:8080"
 
-# .
-SERVICE_PORT=83
+# Broadcast/public load balancer port
+SERVICE_PORT=8080
 
-# .
-GROUP_PORT=80
+# Port of the container(s) which will receieves the TCP request
+GROUP_PORT=8000
 
-# .
+# Scalled group name (usually the name of the config in docker-compose.yaml)
 GROUP_NAME="database"
