--- a/packages/tests/.env
+++ b/packages/tests/.env
@@ -1,7 +1,9 @@
 # The url of the service which will be tested
 SERVICE_URL="http://127.0.0.1:8080"
 
-# Stres test env
+# Stres - Total amount of the requests to send
 STRESS_AMOUNT=100000
+# Stres - How many clusters will work in parallel
 STRESS_CLUSTERS=50
+# Stres - Haw many requests workers will work in parallel in each cluster
 STERSS_WORKERS=20
